--- a/css/style.css
+++ b/css/style.css
@@ -506,7 +506,7 @@ ol, ul, li {
   height: 160px;
   bottom: -60px;
   left: -53px;
-  background-image: url(/img/setka.jpg);
+  background-image: url(./img/setka.jpg);
   z-index: 1;
 }
 
@@ -599,7 +599,7 @@ ol, ul, li {
   height: 160px;
   bottom: -60px;
   right: -53px;
-  background-image: url(img/setka.jpg);
+  background-image: url(./img/setka.jpg);
   -webkit-transform: rotate(270deg);
           transform: rotate(270deg);
   z-index: 1;
